@@ -14,6 +14,9 @@ Version 8.34 xx-xxxx-201x
     enable coverage support, which is totally false. There was also support for
     setting this macro in the CMake files (my fault, I just copied it from
     configure). SUPPORT_GCOV has now been removed.
+    
+3.  Make a small performance improvement in strlen16() and strlen32() in
+    pcretest.
 
 
 Version 8.33 28-May-2013
